--- a/ScreenRotationExclusion.csproj
+++ b/ScreenRotationExclusion.csproj
@@ -119,10 +119,10 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DelegateCommand.cs" />
     <Compile Include="ElementOrientation.cs" />
+    <Compile Include="ElementOrientationExtensions.cs" />
     <Compile Include="ElementOrientations.cs" />
-    <Compile Include="EnumToStringConverter.cs" />
+    <Compile Include="Converters\EnumToStringConverter.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -130,7 +130,7 @@
     <Compile Include="OrientationOrigins.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyChangeNotifier.cs" />
-    <Compile Include="RadioConverter.cs" />
+    <Compile Include="Converters\RadioConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
